# VoidPlayer

./: CMakeLists.txt  VoidPlayer.sln
ApplicationGUI/: ApplicationGUI.vcxproj  ApplicationGUI.vcxproj.filters  BaseWindow.h  ButtonControls.h  CMakeLists.txt  Controls.h  GraphicsUtils.h  MainWindow.cpp  MainWindow.h  cpp.hint
ApplicationGUI/Panels/: MusicControl.h
ApplicationGUI/src/: ApplicationGUI.h  Core.h  pch.h
ApplicationGUI/src/Controls/: Control.cpp  Control.h  CustomDrawnIconButton.cpp  CustomDrawnIconButton.h  Label.cpp  Label.h  Panel.cpp  Panel.h  Slider.cpp  Slider.h
ApplicationGUI/src/Window/: BaseWindow.cpp  BaseWindow.h
BASS/: CMakeLists.txt
MusicHandler/: CMakeLists.txt  MusicHandler.cpp  MusicHandler.h  MusicHandler.vcxproj  MusicHandler.vcxproj.filters
MusicHandler/src/: Core.h  MusicHandler.cpp  MusicHandler.h  Queue.cpp  Queue.h
OLDApplicationGUI/: ApplicationGUI.h  ApplicationGUI.vcxproj  ApplicationGUI.vcxproj.filters  Source.cpp  agpch.h
OLDApplicationGUI/Controls/: BasicControls.h  Controls.h
OLDApplicationGUI/Utils/: GraphicsUtils.h
OLDApplicationGUI/Window/: BaseWindow.h
OLDVoidPlayer/: Main.cpp  VoidPlayer.vcxproj  VoidPlayer.vcxproj.filters  mpch.cpp  mpch.h
OLDVoidPlayer/MainWindow/: MainWindow.cpp  MainWindow.h
OLDVoidPlayer/MainWindow/Panels/: MusicControlPanel.cpp  MusicControlPanel.h
VoidPlayer/: VoidPlayer.vcxproj  VoidPlayer.vcxproj.filters
VoidPlayer/src/: Application.cpp
VoidPlayer/src/MainWindow/: MainWindow.cpp  MainWindow.h
VoidPlayerCore/: CMakeLists.txt  Void Player.cpp  Void Player.h
